# metin2routes

./: .clang-format  CMakeLists.txt  README.md
cmake/: add.cmake  cfg.cmake  platform_win32.cmake
intern/atomic/: CMakeLists.txt
intern/guardedalloc/: CMakeLists.txt
intern/testing/: CMakeLists.txt
source/: CMakeLists.txt
source/client/: CMakeLists.txt  main.c
source/client/intern/: CAccountConnector.c  CAccountConnector.h  CActorInstance.cc  CActorInstance.h  CNetworkActorManager.cc  CNetworkActorManager.h  CNetworkStream.c  CNetworkStream.h  CPythonApplication.c  CPythonApplication.cc  CPythonApplication.h  CPythonMinimap.c  CPythonMinimap.h  CPythonNetworkStream.c  CPythonNetworkStream.h  CRaventor.c  CRaventor.h  CString.cc  CString.h  Packet.h
source/creator/: CMakeLists.txt  main.c
source/hook/: CMakeLists.txt
source/hook/datatoc/: CMakeLists.txt  datatoc.c
source/hook/hooklib/: CMakeLists.txt  LIB_assert.h  LIB_fileops.h  LIB_listbase.h  LIB_memory.h  LIB_path_utils.h  LIB_string_utf.h  LIB_utildefines.h
source/hook/hooklib/algorithm/: rabin_karp.c
source/hook/hooklib/intern/: assert.c  fileops.c  listbase_inline.c  memory.c  path_utils.c  path_utils_inline.c  string.c  string_utf.c  utildefines.c
source/hook/hooklib/test/: string.cc
source/hook/kernel/: CMakeLists.txt  KER_global.h  KER_main.h
source/hook/kernel/intern/: global.c  global_launch_json.c  main.c
source/hook/launch/: CMakeLists.txt  launch.json
source/launcher/: CMakeLists.txt  launch.json  main.c
